<resources>
    <!-- Destinations -->
    <string name="missing_type_name">Missing Type Screen</string>
    <string name="pet_info_name">Pet Info Screen</string>
    <string name="choose_animal_breed_name">Choose Animal and Breed Screen</string>
    <string name="share_info_name">Share Info Screen</string>
    <string name="add_confirmation_name">Add Confirmation Screen</string>

    <!-- Views -->
    <string name="report_pet_found_flow_title">Report Pet Found</string>
    <string name="report_pet_lost_flow_title">Report Pet Lost</string>
    <string name="no_name_message">no name</string>
    <string name="no_photo_message">no photo</string>
    <string name="no_name_and_photo_message">no name and photo</string>
    <string name="no_animal_and_breed_message">no animal and breed</string>
    <string name="no_contact_info_message">no contact info</string>
    <string name="animal_title">Animal</string>
    <string name="breed_title">Breed</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="reporting_found_pet_message">Reporting %s as found by you…</string>
    <string name="found_pet_reported_message">%s is now in the pets you found!</string>
    <string name="reporting_lost_pet_message">Reporting you lost %s…</string>
    <string name="lost_pet_reported_message">%s is now in the pets you lost!</string>
    <string name="share_info_title_text">Which kind of information to share</string>
    <string name="lost_radio_text">Lost</string>
    <string name="found_radio_text">Found</string>
    <string name="new_missing_pet_type_title">Start by choosing if you lost your pet or found one.</string>
    <string name="unknown_name">Unknown</string>
</resources>