<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar.Transparent"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="0dp"
        app:navigationIcon="@drawable/ic_baseline_close"
        app:navigationIconTint="?colorSecondary"
        app:titleTextColor="@android:color/white"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/type_title"
        style="@style/Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:textColor="?colorSecondary"
        android:gravity="start"
        android:text="@string/new_missing_pet_type_title"/>

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forward_button"
        android:paddingStart="@dimen/margin_extra_large"
        android:paddingEnd="@dimen/margin_extra_large"
        android:gravity="center_vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lost_radio_button"
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_medium"
            android:checked="true"
            android:text="@string/lost_radio_text"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/found_radio_button"
            style="@style/Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_medium"
            android:text="@string/found_radio_text"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_arrow_back" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/forward_button"
        style="@style/ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_baseline_arrow_forward"
        app:iconTint="@android:color/white"
        app:backgroundTint="?colorSecondary"
        android:enabled="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>