<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <include layout="@layout/new_missing_pet_header"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/animal_title"
        style="@style/Overline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:textAlignment="viewStart"
        android:textColor="?colorSecondary"
        android:text="@string/animal_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/animals_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/animal_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal"
        android:layoutAnimation="@anim/horizontal_list_animation"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breed_title"
        style="@style/Overline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/animals_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:textAlignment="viewStart"
        android:textColor="?colorSecondary"
        android:text="@string/breed_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/breeds_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/breed_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal"
        android:layoutAnimation="@anim/horizontal_list_animation"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_arrow_back" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/forward_button"
        style="@style/ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_baseline_arrow_forward"
        app:iconTint="@android:color/white"
        app:backgroundTint="?colorSecondary"
        android:textColor="@android:color/white"
        android:text="@string/no_contact_info_message"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>