<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <include layout="@layout/new_missing_pet_header"/>

    <ImageView
        android:id="@+id/camera_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/animal_photo"
        app:layout_constraintEnd_toEndOf="@id/animal_photo"
        app:layout_constraintTop_toTopOf="@id/animal_photo"
        app:layout_constraintBottom_toBottomOf="@id/animal_photo"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_add_a_photo" />

    <ImageView
        android:id="@+id/animal_photo"
        android:layout_width="@dimen/add_pet_photo_size"
        android:layout_height="@dimen/add_pet_photo_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_background"
        android:layout_marginTop="@dimen/margin_large"
        android:padding="@dimen/icon_border"
        android:background="@drawable/secondary_circular_background"
        android:foreground="?selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_photo"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textColorHint="?colorSecondary"
        android:hint="@string/name_hint"
        app:boxBackgroundColor="@android:color/white"
        app:endIconTint="?colorSecondary"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Headline6"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textColorHint="?colorSecondary"
        android:hint="@string/description_hint"
        app:boxBackgroundColor="@android:color/white"
        app:endIconTint="?colorSecondary"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Headline6"
            android:maxLines="6"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_arrow_back" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/forward_button"
        style="@style/ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_baseline_arrow_forward"
        app:iconTint="@android:color/white"
        app:backgroundTint="?colorSecondary"
        android:textColor="@android:color/white"
        android:text="@string/no_name_message"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>